# lsofrs

./: .gitignore  Cargo.toml  README.md  lsofrs.1  lsofrs.conf  lsofrs.default.conf
.github/workflows/: ci.yml  release.yml
completions/: _lsofrs
docs/: index.html  report.html
man/man1/: lsofrs.1  lsofrsall.1
src/: cli.rs  config.rs  csv_out.rs  darwin.rs  delta.rs  filter.rs  follow.rs  freebsd.rs  json.rs  leak.rs  lib.rs  linux.rs  main.rs  monitor.rs  net_map.rs  output.rs  pipe_chain.rs  ports.rs  stale.rs  stall.rs  strutil.rs  summary.rs  theme.rs  top.rs  tree.rs  tui_app.rs  tui_tabs.rs  types.rs  watch.rs
tests/: cli_combinations.rs  color_output.rs  contract_csv_fd_port_range.rs  contract_field_output_round4.rs  contract_filter_combinators.rs  dispatch_contracts.rs  filters_and_paths.rs  inet_filter_selector_port_and_reversed_range.rs  inet_parsed_host_precomputation.rs  integration.rs  json_and_csv_contracts.rs  json_shape.rs  json_wrappers.rs  library_smoke.rs  lsf_binary.rs
