[package]
name = "lsofrs"
version = "1.5.2"
edition = "2024"
authors = ["Jacob Menke"]
description = "Modern, high-performance lsof implementation in Rust"
license = "MIT"
repository = "https://github.com/MenkeTechnologies/lsofrs"
keywords = ["lsof", "process", "files", "sockets", "diagnostics"]
categories = ["command-line-utilities", "os"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.28"
libc = "0.2"
nix = { version = "0.29", features = ["signal", "term", "ioctl", "user", "fs", "net", "hostname"] }
users = "0.11"
regex = "1"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
