[package]
name = "lsofrs"
version = "4.8.0"
edition = "2024"
authors = ["Jacob Menke"]
description = "Modern, high-performance lsof implementation in Rust"
license = "MIT"
repository = "https://github.com/MenkeTechnologies/lsofrs"
keywords = ["lsof", "process", "files", "sockets", "diagnostics"]
categories = ["command-line-utilities", "os"]
readme = "README.md"
default-run = "lsofrs"
exclude = ["screenshots/", "*.png"]

[[bin]]
name = "lsf"
path = "src/main.rs"

[[bin]]
name = "lsofrs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.29"
libc = "0.2"
nix = { version = "0.31", features = ["signal", "term", "ioctl", "user", "fs", "net", "hostname"] }
users = "0.11"
regex = "1"
chrono = "0.4"
rayon = "1"
ratatui = "0.30"
toml = "1.1"
dirs = "6"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
